# rmf

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Image_Server/src/zmq_vision_follower/: CMakeLists.txt  package.xml  setup.cfg  setup.py  udp_camera_client.py
Image_Server/src/zmq_vision_follower/zmq_vision_follower/: zmq_vision_follower.py
ROBOCALLEE_FMS/: CMakeLists.txt
ROBOCALLEE_FMS/Utile/Logger/include/: Logger.hpp
ROBOCALLEE_FMS/include/: TaskManager.hpp
ROBOCALLEE_FMS/src/: Core.cpp  TaskManager.cpp
Robocallee_Fms/: CMakeLists.txt  main.cpp
Robocallee_Fms/Adapters/include/: AmrAdapter.hpp  RobotArmAdapter.hpp
Robocallee_Fms/Adapters/src/: AmrAdapter.cpp  RobotArmAdapter.cpp
Robocallee_Fms/Core/include/: Commondefine.hpp  Core.hpp  ICore.hpp  Integrated.hpp
Robocallee_Fms/Core/src/: Core.cpp
Robocallee_Fms/Interface/include/: Interface.hpp  RosInterface.hpp
Robocallee_Fms/Interface/src/: RosInterface.cpp
Robocallee_Fms/Log_file/2025-07-25/: 10.txt  11.txt
Robocallee_Fms/Request/include/: RequestManager.hpp
Robocallee_Fms/Request/src/: RequestManager.cpp
Robocallee_Fms/Task/include/: Dispatcher.hpp  Executor.hpp
Robocallee_Fms/Task/src/: Dispatcher.cpp  Executor.cpp
Robocallee_Fms/Utile/Log_file/2025-07-25/: 11.txt
Robocallee_Fms/Utile/Logger/src/: Logger.cpp
Robocallee_Fms/_build/: Makefile  cmake_install.cmake
Robocallee_Fms/_build/.cmake/api/v1/reply/: cache-v2-922924d7b40f59139085.json  index-2025-07-25T07-40-56-0876.json  target-ROBOCALLEE_FMS-Debug-9332242cceea74ed14eb.json
Robocallee_Fms/_build/ament_cmake_environment_hooks/: local_setup.sh
Robocallee_Fms/_build/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
Robocallee_Fms/install/: local_setup.sh  setup.bash  setup.sh
Robocallee_Fms/install/ROBOCALLEE_FMS/share/ROBOCALLEE_FMS/: package.bash  package.zsh
Robocallee_Fms/install/robocallee_fms/share/robocallee_fms/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
Robocallee_Fms/install/robocallee_fms/share/robocallee_fms/cmake/: robocallee_fmsConfig.cmake
Robocallee_Fms/log/: latest_build
Robocallee_Fms/temp/include/: AmrAdapter.hpp  Core.hpp  RosInterface.hpp  TaskManager.hpp
Robocallee_PickBot/: CMakeLists.txt  main.cpp  package.xml
Robocallee_PickBot/Core/include/: Commondefine.hpp  Core.hpp
Robocallee_PickBot/Core/src/: Core.cpp
Robocallee_PickBot/ImageProcessing/Calibration/include/: Calibrator.hpp
Robocallee_PickBot/ImageProcessing/Calibration/src/: Calibrator.cpp
Robocallee_PickBot/ImageProcessing/Detectors/include/: QRcodeDetector.hpp  objectDetector.hpp
Robocallee_PickBot/ImageProcessing/Detectors/src/: ArUcoMakerDetector.cpp  QRcodeDetector.cpp
Robocallee_PickBot/Interface/include/: RosInterface.hpp
Robocallee_PickBot/Interface/src/: RosInterface.cpp
Robocallee_PickBot/RobotArm/include/: RobotArm.hpp
Robocallee_PickBot/RobotArm/src/: RobotArm.cpp
Robocallee_PickBot/calib_file/: Calib.XML
Robocallee_PickBot/install/: local_setup.sh  setup.ps1  setup.sh  setup.zsh
Robocallee_PickBot/install/robocallee_pickbot/share/robocallee_pickbot/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
Robocallee_PickBot/log/: latest_build  latest_list
Technology survey/robotCamtoArm/: CMakeLists.txt  capture_data.yaml  main.cpp
Technology survey/robotCamtoArm/Calib/: CameraCalib.XML
Technology survey/robotCamtoArm/Calib_Image/: capture_log.txt
Technology survey/robotCamtoArm/include/: Camera.hpp  Logger.hpp  yamlReader.hpp
Technology survey/robotCamtoArm/include/Calib/: Calibrator.hpp
Technology survey/robotCamtoArm/include/Detectors/: ArUcoMakerDetector.hpp  objectDetector.hpp
Technology survey/robotCamtoArm/include/Robot/: RobotArm.hpp
Technology survey/robotCamtoArm/src/: Logger.cpp  yamlReader.cpp
Technology survey/robotCamtoArm/src/Calib/: Calibrator.cpp
Technology survey/robotCamtoArm/src/Detectors/: ArUcoMakerDetector.cpp  QRcodeDetector.cpp
Technology survey/robotCamtoArm/src/Robot/: RobotArm.cpp
robocallee_fms/: CMakeLists.txt  main.cpp  package.xml
robocallee_fms/Adapters/include/: AmrAdapter.hpp  RobotArmAdapter.hpp
robocallee_fms/Adapters/src/: AmrAdapter.cpp
robocallee_fms/Core/include/: Commondefine.hpp  Core.hpp  ICore.hpp
robocallee_fms/Core/src/: Core.cpp
robocallee_fms/Interface/include/: RosInterface.hpp
robocallee_fms/Interface/src/: RosInterface.cpp
robocallee_fms/Request/include/: RequestManager.hpp
robocallee_fms/Request/src/: RequestManager.cpp
robocallee_fms/Task/include/: Dispatcher.hpp
robocallee_fms/Task/src/: Dispatcher.cpp
robocallee_fms/_build/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  ROBOCALLEE_FMS  compile_commands.json
robocallee_fms/_build/.cmake/api/v1/reply/: cmakeFiles-v1-85390a4b561f69d43363.json  codemodel-v2-a7d7225c6042526c444c.json  directory-.-Debug-8c963181b2a1470b0522.json  target-ROBOCALLEE_FMS_uninstall-Debug-ab4058cf76ce4ca3600a.json  target-uninstall-Debug-5fe57c387e983f46e0f9.json
robocallee_fms/_build/Testing/: TAG
robocallee_fms/_build/Testing/20250725-0740/: Test.xml
robocallee_fms/_build/ament_cmake_core/: ROBOCALLEE_FMSConfig.cmake  package.cmake
robocallee_fms/_build/ament_cmake_core/stamps/: package.xml.stamp
robocallee_fms/_build/ament_cmake_environment_hooks/: local_setup.dsv  package.dsv
robocallee_fms/install/: local_setup.sh  setup.sh
robocallee_fms/install/robocallee_fms/share/robocallee_fms/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
robocallee_fms/install/robocallee_fms/share/robocallee_fms/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_robocallee_fms__rosidl_generator_cExport-noconfig.cmake  export_robocallee_fms__rosidl_generator_cExport.cmake  robocallee_fmsConfig.cmake  (+18 more)
robocallee_fms/log/: latest_build
robocallee_fms/srv/: DoneMsg.srv  ShoeRequest.srv
(+79 files in other folders)
