<?xml version="1.0"?>
<package format="3">
  <name>zmq_vision_follower</name>
  <version>0.0.0</version>
  <description>YOLO 기반 Vision → Twist 퍼블리시 노드</description>

  <maintainer email="dldmsgp214@gmail.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclpy</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
</package>
